math scores by grade added

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a7f39af",
+   "id": "891001dd",
    "metadata": {},
    "source": [
     "## Top Performing Schools (By % Overall Passing)"
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 473,
-   "id": "aa99428b",
+   "id": "62b5accf",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fed6f5a",
+   "id": "3cd537f3",
    "metadata": {},
    "source": [
     "## Bottom Performing Schools (By % Overall Passing)"
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 476,
-   "id": "30cebbe6",
+   "id": "f15126df",
    "metadata": {},
    "outputs": [
     {
@@ -586,9 +586,222 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c394fac",
+   "metadata": {},
+   "source": [
+    "## Math Scores by Grade\n",
+    "\n",
+    "* Create a table that lists the average Reading Score for students of each grade level (9th, 10th, 11th, 12th) at each school.\n",
+    "\n",
+    "  * Create a pandas series for each grade. Hint: use a conditional statement.\n",
+    "  \n",
+    "  * Group each series by school\n",
+    "  \n",
+    "  * Combine the series into a dataframe\n",
+    "  \n",
+    "  * Optional: give the displayed data cleaner formatting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 508,
+   "id": "7b425018",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>77.083676</td>\n",
+       "      <td>76.996772</td>\n",
+       "      <td>77.515588</td>\n",
+       "      <td>76.492218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.094697</td>\n",
+       "      <td>83.154506</td>\n",
+       "      <td>82.765560</td>\n",
+       "      <td>83.277487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>76.403037</td>\n",
+       "      <td>76.539974</td>\n",
+       "      <td>76.884344</td>\n",
+       "      <td>77.151369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>77.361345</td>\n",
+       "      <td>77.672316</td>\n",
+       "      <td>76.918058</td>\n",
+       "      <td>76.179963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>82.044010</td>\n",
+       "      <td>84.229064</td>\n",
+       "      <td>83.842105</td>\n",
+       "      <td>83.356164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>77.438495</td>\n",
+       "      <td>77.337408</td>\n",
+       "      <td>77.136029</td>\n",
+       "      <td>77.186567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.787402</td>\n",
+       "      <td>83.429825</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>82.855422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>77.027251</td>\n",
+       "      <td>75.908735</td>\n",
+       "      <td>76.446602</td>\n",
+       "      <td>77.225641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>77.187857</td>\n",
+       "      <td>76.691117</td>\n",
+       "      <td>77.491653</td>\n",
+       "      <td>76.863248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.625455</td>\n",
+       "      <td>83.372000</td>\n",
+       "      <td>84.328125</td>\n",
+       "      <td>84.121547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.859966</td>\n",
+       "      <td>76.612500</td>\n",
+       "      <td>76.395626</td>\n",
+       "      <td>77.690748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.420755</td>\n",
+       "      <td>82.917411</td>\n",
+       "      <td>83.383495</td>\n",
+       "      <td>83.778976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.590022</td>\n",
+       "      <td>83.087886</td>\n",
+       "      <td>83.498795</td>\n",
+       "      <td>83.497041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.085578</td>\n",
+       "      <td>83.724422</td>\n",
+       "      <td>83.195326</td>\n",
+       "      <td>83.035794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.264706</td>\n",
+       "      <td>84.010288</td>\n",
+       "      <td>83.836782</td>\n",
+       "      <td>83.644986</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             9th       10th       11th       12th\n",
+       "Bailey High School     77.083676  76.996772  77.515588  76.492218\n",
+       "Cabrera High School    83.094697  83.154506  82.765560  83.277487\n",
+       "Figueroa High School   76.403037  76.539974  76.884344  77.151369\n",
+       "Ford High School       77.361345  77.672316  76.918058  76.179963\n",
+       "Griffin High School    82.044010  84.229064  83.842105  83.356164\n",
+       "Hernandez High School  77.438495  77.337408  77.136029  77.186567\n",
+       "Holden High School     83.787402  83.429825  85.000000  82.855422\n",
+       "Huang High School      77.027251  75.908735  76.446602  77.225641\n",
+       "Johnson High School    77.187857  76.691117  77.491653  76.863248\n",
+       "Pena High School       83.625455  83.372000  84.328125  84.121547\n",
+       "Rodriguez High School  76.859966  76.612500  76.395626  77.690748\n",
+       "Shelton High School    83.420755  82.917411  83.383495  83.778976\n",
+       "Thomas High School     83.590022  83.087886  83.498795  83.497041\n",
+       "Wilson High School     83.085578  83.724422  83.195326  83.035794\n",
+       "Wright High School     83.264706  84.010288  83.836782  83.644986"
+      ]
+     },
+     "execution_count": 508,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a datatable for each grade with their maths average\n",
+    "ninthgroup = school_data_complete.loc[school_data_complete[\"grade\"] == \"9th\"].groupby([\"school_name\"])\n",
+    "ninthavg = ninthgroup[\"math_score\"].mean()\n",
+    "ninth_maths = ninthavg.reset_index().rename(columns={\"math_score\":\"9th\"})\n",
+    "\n",
+    "tenthgroup = school_data_complete.loc[school_data_complete[\"grade\"] == \"10th\"].groupby([\"school_name\"])\n",
+    "tenthavg = tenthgroup[\"math_score\"].mean()\n",
+    "tenth_maths = tenthavg.reset_index().rename(columns={\"math_score\":\"10th\"})\n",
+    "\n",
+    "eleventhgroup = school_data_complete.loc[school_data_complete[\"grade\"] == \"11th\"].groupby([\"school_name\"])\n",
+    "eleventhavg = eleventhgroup[\"math_score\"].mean()\n",
+    "eleventh_maths = eleventhavg.reset_index().rename(columns={\"math_score\":\"11th\"})\n",
+    "\n",
+    "twelfthgroup = school_data_complete.loc[school_data_complete[\"grade\"] == \"12th\"].groupby([\"school_name\"])\n",
+    "twelfthavg = twelfthgroup[\"math_score\"].mean()\n",
+    "twelfth_maths = twelfthavg.reset_index().rename(columns={\"math_score\":\"12th\"})\n",
+    "\n",
+    "#merge these into a single data table\n",
+    "math_score_merge = pd.merge(ninth_maths, tenth_maths, on=\"school_name\")\n",
+    "math_score_merge = pd.merge(math_score_merge, eleventh_maths, on=\"school_name\")\n",
+    "math_score_merge = pd.merge(math_score_merge, twelfth_maths, on=\"school_name\")\n",
+    "math_score_merge = math_score_merge\n",
+    "math_score_merge = math_score_merge.set_index(\"school_name\")\n",
+    "math_score_merge.index.name = None\n",
+    "math_score_merge"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb21f412",
+   "id": "ee3ef5a9",
    "metadata": {},
    "outputs": [],
    "source": []
