--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "891001dd",
+   "id": "155a6535",
    "metadata": {},
    "source": [
     "## Top Performing Schools (By % Overall Passing)"
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 473,
-   "id": "62b5accf",
+   "id": "6c1a9e06",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cd537f3",
+   "id": "3dd715e0",
    "metadata": {},
    "source": [
     "## Bottom Performing Schools (By % Overall Passing)"
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 476,
-   "id": "f15126df",
+   "id": "8a9c2c9c",
    "metadata": {},
    "outputs": [
     {
@@ -587,26 +587,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c394fac",
+   "id": "48c11a93",
    "metadata": {},
    "source": [
-    "## Math Scores by Grade\n",
-    "\n",
-    "* Create a table that lists the average Reading Score for students of each grade level (9th, 10th, 11th, 12th) at each school.\n",
-    "\n",
-    "  * Create a pandas series for each grade. Hint: use a conditional statement.\n",
-    "  \n",
-    "  * Group each series by school\n",
-    "  \n",
-    "  * Combine the series into a dataframe\n",
-    "  \n",
-    "  * Optional: give the displayed data cleaner formatting"
+    "## Math Scores by Grade"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 508,
-   "id": "7b425018",
+   "id": "4bfaa043",
    "metadata": {},
    "outputs": [
     {
@@ -799,9 +789,212 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93c733bd",
+   "metadata": {},
+   "source": [
+    "## Reading Score by Grade "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 510,
+   "id": "33b2d911",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>81.303155</td>\n",
+       "      <td>80.907183</td>\n",
+       "      <td>80.945643</td>\n",
+       "      <td>80.912451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.676136</td>\n",
+       "      <td>84.253219</td>\n",
+       "      <td>83.788382</td>\n",
+       "      <td>84.287958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>81.198598</td>\n",
+       "      <td>81.408912</td>\n",
+       "      <td>80.640339</td>\n",
+       "      <td>81.384863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>80.632653</td>\n",
+       "      <td>81.262712</td>\n",
+       "      <td>80.403642</td>\n",
+       "      <td>80.662338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>83.369193</td>\n",
+       "      <td>83.706897</td>\n",
+       "      <td>84.288089</td>\n",
+       "      <td>84.013699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>80.866860</td>\n",
+       "      <td>80.660147</td>\n",
+       "      <td>81.396140</td>\n",
+       "      <td>80.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.677165</td>\n",
+       "      <td>83.324561</td>\n",
+       "      <td>83.815534</td>\n",
+       "      <td>84.698795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>81.290284</td>\n",
+       "      <td>81.512386</td>\n",
+       "      <td>81.417476</td>\n",
+       "      <td>80.305983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>81.260714</td>\n",
+       "      <td>80.773431</td>\n",
+       "      <td>80.616027</td>\n",
+       "      <td>81.227564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.807273</td>\n",
+       "      <td>83.612000</td>\n",
+       "      <td>84.335938</td>\n",
+       "      <td>84.591160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>80.993127</td>\n",
+       "      <td>80.629808</td>\n",
+       "      <td>80.864811</td>\n",
+       "      <td>80.376426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.122642</td>\n",
+       "      <td>83.441964</td>\n",
+       "      <td>84.373786</td>\n",
+       "      <td>82.781671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.728850</td>\n",
+       "      <td>84.254157</td>\n",
+       "      <td>83.585542</td>\n",
+       "      <td>83.831361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.939778</td>\n",
+       "      <td>84.021452</td>\n",
+       "      <td>83.764608</td>\n",
+       "      <td>84.317673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.833333</td>\n",
+       "      <td>83.812757</td>\n",
+       "      <td>84.156322</td>\n",
+       "      <td>84.073171</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             9th       10th       11th       12th\n",
+       "Bailey High School     81.303155  80.907183  80.945643  80.912451\n",
+       "Cabrera High School    83.676136  84.253219  83.788382  84.287958\n",
+       "Figueroa High School   81.198598  81.408912  80.640339  81.384863\n",
+       "Ford High School       80.632653  81.262712  80.403642  80.662338\n",
+       "Griffin High School    83.369193  83.706897  84.288089  84.013699\n",
+       "Hernandez High School  80.866860  80.660147  81.396140  80.857143\n",
+       "Holden High School     83.677165  83.324561  83.815534  84.698795\n",
+       "Huang High School      81.290284  81.512386  81.417476  80.305983\n",
+       "Johnson High School    81.260714  80.773431  80.616027  81.227564\n",
+       "Pena High School       83.807273  83.612000  84.335938  84.591160\n",
+       "Rodriguez High School  80.993127  80.629808  80.864811  80.376426\n",
+       "Shelton High School    84.122642  83.441964  84.373786  82.781671\n",
+       "Thomas High School     83.728850  84.254157  83.585542  83.831361\n",
+       "Wilson High School     83.939778  84.021452  83.764608  84.317673\n",
+       "Wright High School     83.833333  83.812757  84.156322  84.073171"
+      ]
+     },
+     "execution_count": 510,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a datatable for each grade with their reading average\n",
+    "ninthgroup = school_data_complete.loc[school_data_complete[\"grade\"] == \"9th\"].groupby([\"school_name\"])\n",
+    "ninthavg = ninthgroup[\"reading_score\"].mean()\n",
+    "ninth_readings = ninthavg.reset_index().rename(columns={\"reading_score\":\"9th\"})\n",
+    "\n",
+    "tenthgroup = school_data_complete.loc[school_data_complete[\"grade\"] == \"10th\"].groupby([\"school_name\"])\n",
+    "tenthavg = tenthgroup[\"reading_score\"].mean()\n",
+    "tenth_readings = tenthavg.reset_index().rename(columns={\"reading_score\":\"10th\"})\n",
+    "\n",
+    "eleventhgroup = school_data_complete.loc[school_data_complete[\"grade\"] == \"11th\"].groupby([\"school_name\"])\n",
+    "eleventhavg = eleventhgroup[\"reading_score\"].mean()\n",
+    "eleventh_readings = eleventhavg.reset_index().rename(columns={\"reading_score\":\"11th\"})\n",
+    "\n",
+    "twelfthgroup = school_data_complete.loc[school_data_complete[\"grade\"] == \"12th\"].groupby([\"school_name\"])\n",
+    "twelfthavg = twelfthgroup[\"reading_score\"].mean()\n",
+    "twelfth_readings = twelfthavg.reset_index().rename(columns={\"reading_score\":\"12th\"})\n",
+    "\n",
+    "#merge these into a single data table\n",
+    "reading_score_merge = pd.merge(ninth_readings, tenth_readings, on=\"school_name\")\n",
+    "reading_score_merge = pd.merge(reading_score_merge, eleventh_readings, on=\"school_name\")\n",
+    "reading_score_merge = pd.merge(reading_score_merge, twelfth_readings, on=\"school_name\")\n",
+    "reading_score_merge = reading_score_merge\n",
+    "reading_score_merge = reading_score_merge.set_index(\"school_name\")\n",
+    "reading_score_merge.index.name = None\n",
+    "reading_score_merge"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee3ef5a9",
+   "id": "0848197d",
    "metadata": {},
    "outputs": [],
    "source": []
