--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -1021,100 +1021,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 729,
    "id": "524e11cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Average Math Score</th>\n",
-       "      <th>Average Reading Score</th>\n",
-       "      <th>% Passing Math</th>\n",
-       "      <th>% Passing Reading</th>\n",
-       "      <th>% Overall Passing</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>spending_bins</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>&lt; $585</th>\n",
-       "      <td>83.363065</td>\n",
-       "      <td>83.964039</td>\n",
-       "      <td>0.937029</td>\n",
-       "      <td>0.966866</td>\n",
-       "      <td>0.906407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>$585-630</th>\n",
-       "      <td>79.982873</td>\n",
-       "      <td>82.312643</td>\n",
-       "      <td>0.791099</td>\n",
-       "      <td>0.885131</td>\n",
-       "      <td>0.709392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>$630-645</th>\n",
-       "      <td>77.821056</td>\n",
-       "      <td>81.301007</td>\n",
-       "      <td>0.706236</td>\n",
-       "      <td>0.826002</td>\n",
-       "      <td>0.588412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>$645-680</th>\n",
-       "      <td>77.049297</td>\n",
-       "      <td>81.005604</td>\n",
-       "      <td>0.662308</td>\n",
-       "      <td>0.811094</td>\n",
-       "      <td>0.535288</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_b7a2c_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Average Math Score</th>        <th class=\"col_heading level0 col1\" >Average Reading Score</th>        <th class=\"col_heading level0 col2\" >% Passing Math</th>        <th class=\"col_heading level0 col3\" >% Passing Reading</th>        <th class=\"col_heading level0 col4\" >% Overall Passing</th>    </tr>    <tr>        <th class=\"index_name level0\" >spending_bins</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_b7a2c_level0_row0\" class=\"row_heading level0 row0\" >< $585</th>\n",
+       "                        <td id=\"T_b7a2c_row0_col0\" class=\"data row0 col0\" >83.36</td>\n",
+       "                        <td id=\"T_b7a2c_row0_col1\" class=\"data row0 col1\" >83.96</td>\n",
+       "                        <td id=\"T_b7a2c_row0_col2\" class=\"data row0 col2\" >93.702889</td>\n",
+       "                        <td id=\"T_b7a2c_row0_col3\" class=\"data row0 col3\" >96.69</td>\n",
+       "                        <td id=\"T_b7a2c_row0_col4\" class=\"data row0 col4\" >90.64</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_b7a2c_level0_row1\" class=\"row_heading level0 row1\" >$585-630</th>\n",
+       "                        <td id=\"T_b7a2c_row1_col0\" class=\"data row1 col0\" >79.98</td>\n",
+       "                        <td id=\"T_b7a2c_row1_col1\" class=\"data row1 col1\" >82.31</td>\n",
+       "                        <td id=\"T_b7a2c_row1_col2\" class=\"data row1 col2\" >79.109851</td>\n",
+       "                        <td id=\"T_b7a2c_row1_col3\" class=\"data row1 col3\" >88.51</td>\n",
+       "                        <td id=\"T_b7a2c_row1_col4\" class=\"data row1 col4\" >70.94</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_b7a2c_level0_row2\" class=\"row_heading level0 row2\" >$630-645</th>\n",
+       "                        <td id=\"T_b7a2c_row2_col0\" class=\"data row2 col0\" >77.82</td>\n",
+       "                        <td id=\"T_b7a2c_row2_col1\" class=\"data row2 col1\" >81.30</td>\n",
+       "                        <td id=\"T_b7a2c_row2_col2\" class=\"data row2 col2\" >70.623565</td>\n",
+       "                        <td id=\"T_b7a2c_row2_col3\" class=\"data row2 col3\" >82.60</td>\n",
+       "                        <td id=\"T_b7a2c_row2_col4\" class=\"data row2 col4\" >58.84</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_b7a2c_level0_row3\" class=\"row_heading level0 row3\" >$645-680</th>\n",
+       "                        <td id=\"T_b7a2c_row3_col0\" class=\"data row3 col0\" >77.05</td>\n",
+       "                        <td id=\"T_b7a2c_row3_col1\" class=\"data row3 col1\" >81.01</td>\n",
+       "                        <td id=\"T_b7a2c_row3_col2\" class=\"data row3 col2\" >66.230813</td>\n",
+       "                        <td id=\"T_b7a2c_row3_col3\" class=\"data row3 col3\" >81.11</td>\n",
+       "                        <td id=\"T_b7a2c_row3_col4\" class=\"data row3 col4\" >53.53</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
       ],
       "text/plain": [
-       "               Average Math Score  Average Reading Score  % Passing Math  \\\n",
-       "spending_bins                                                              \n",
-       "< $585                  83.363065              83.964039        0.937029   \n",
-       "$585-630                79.982873              82.312643        0.791099   \n",
-       "$630-645                77.821056              81.301007        0.706236   \n",
-       "$645-680                77.049297              81.005604        0.662308   \n",
-       "\n",
-       "               % Passing Reading  % Overall Passing  \n",
-       "spending_bins                                        \n",
-       "< $585                  0.966866           0.906407  \n",
-       "$585-630                0.885131           0.709392  \n",
-       "$630-645                0.826002           0.588412  \n",
-       "$645-680                0.811094           0.535288  "
+       "<pandas.io.formats.style.Styler at 0x1697e2648e0>"
       ]
      },
-     "execution_count": 683,
+     "execution_count": 729,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,12 +1094,16 @@
     "scores_by_spend = pd.DataFrame({\n",
     "    \"Average Math Score\": math_avg,\n",
     "    \"Average Reading Score\": reading_avg,\n",
-    "    '% Passing Math': math_pass,\n",
-    "    '% Passing Reading': reading_pass,\n",
-    "    \"% Overall Passing\": both_pass})\n",
+    "    \"% Passing Math\": math_pass * 100,\n",
+    "    \"% Passing Reading\": reading_pass * 100,\n",
+    "    \"% Overall Passing\": both_pass * 100})\n",
     "\n",
-    "scores_by_spend\n",
-    "\n"
+    "scores_by_spend.style.format({\"Average Math Score\": \"{:.2f}\", \n",
+    "                              \"Average Reading Score\": \"{:.2f}\", \n",
+    "                              \"% Passing Reading\": \"{:.2f}\", \n",
+    "                              \"% Passing Reading\":\"{:.2f}\", \n",
+    "                              \"% Overall Passing\": \"{:.2f}\" \n",
+    "                             })"
    ]
   },
   {
