--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 771,
    "id": "524e11cb",
    "metadata": {},
    "outputs": [
@@ -1031,46 +1031,46 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_3f1ff_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Average Math Score</th>        <th class=\"col_heading level0 col1\" >Average Reading Score</th>        <th class=\"col_heading level0 col2\" >% Passing Math</th>        <th class=\"col_heading level0 col3\" >% Passing Reading</th>        <th class=\"col_heading level0 col4\" >% Overall Passing</th>    </tr>    <tr>        <th class=\"index_name level0\" >spending_bins</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_7d42a_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Average Math Score</th>        <th class=\"col_heading level0 col1\" >Average Reading Score</th>        <th class=\"col_heading level0 col2\" >% Passing Math</th>        <th class=\"col_heading level0 col3\" >% Passing Reading</th>        <th class=\"col_heading level0 col4\" >% Overall Passing</th>    </tr>    <tr>        <th class=\"index_name level0\" >spending_bins</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_3f1ff_level0_row0\" class=\"row_heading level0 row0\" >< $585</th>\n",
-       "                        <td id=\"T_3f1ff_row0_col0\" class=\"data row0 col0\" >83.36</td>\n",
-       "                        <td id=\"T_3f1ff_row0_col1\" class=\"data row0 col1\" >83.96</td>\n",
-       "                        <td id=\"T_3f1ff_row0_col2\" class=\"data row0 col2\" >93.702889</td>\n",
-       "                        <td id=\"T_3f1ff_row0_col3\" class=\"data row0 col3\" >96.69</td>\n",
-       "                        <td id=\"T_3f1ff_row0_col4\" class=\"data row0 col4\" >90.64</td>\n",
+       "                        <th id=\"T_7d42a_level0_row0\" class=\"row_heading level0 row0\" >< $585</th>\n",
+       "                        <td id=\"T_7d42a_row0_col0\" class=\"data row0 col0\" >83.36</td>\n",
+       "                        <td id=\"T_7d42a_row0_col1\" class=\"data row0 col1\" >83.96</td>\n",
+       "                        <td id=\"T_7d42a_row0_col2\" class=\"data row0 col2\" >93.702889</td>\n",
+       "                        <td id=\"T_7d42a_row0_col3\" class=\"data row0 col3\" >96.69</td>\n",
+       "                        <td id=\"T_7d42a_row0_col4\" class=\"data row0 col4\" >90.64</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_3f1ff_level0_row1\" class=\"row_heading level0 row1\" >$585-630</th>\n",
-       "                        <td id=\"T_3f1ff_row1_col0\" class=\"data row1 col0\" >79.98</td>\n",
-       "                        <td id=\"T_3f1ff_row1_col1\" class=\"data row1 col1\" >82.31</td>\n",
-       "                        <td id=\"T_3f1ff_row1_col2\" class=\"data row1 col2\" >79.109851</td>\n",
-       "                        <td id=\"T_3f1ff_row1_col3\" class=\"data row1 col3\" >88.51</td>\n",
-       "                        <td id=\"T_3f1ff_row1_col4\" class=\"data row1 col4\" >70.94</td>\n",
+       "                        <th id=\"T_7d42a_level0_row1\" class=\"row_heading level0 row1\" >$585-630</th>\n",
+       "                        <td id=\"T_7d42a_row1_col0\" class=\"data row1 col0\" >79.98</td>\n",
+       "                        <td id=\"T_7d42a_row1_col1\" class=\"data row1 col1\" >82.31</td>\n",
+       "                        <td id=\"T_7d42a_row1_col2\" class=\"data row1 col2\" >79.109851</td>\n",
+       "                        <td id=\"T_7d42a_row1_col3\" class=\"data row1 col3\" >88.51</td>\n",
+       "                        <td id=\"T_7d42a_row1_col4\" class=\"data row1 col4\" >70.94</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_3f1ff_level0_row2\" class=\"row_heading level0 row2\" >$630-645</th>\n",
-       "                        <td id=\"T_3f1ff_row2_col0\" class=\"data row2 col0\" >77.82</td>\n",
-       "                        <td id=\"T_3f1ff_row2_col1\" class=\"data row2 col1\" >81.30</td>\n",
-       "                        <td id=\"T_3f1ff_row2_col2\" class=\"data row2 col2\" >70.623565</td>\n",
-       "                        <td id=\"T_3f1ff_row2_col3\" class=\"data row2 col3\" >82.60</td>\n",
-       "                        <td id=\"T_3f1ff_row2_col4\" class=\"data row2 col4\" >58.84</td>\n",
+       "                        <th id=\"T_7d42a_level0_row2\" class=\"row_heading level0 row2\" >$630-645</th>\n",
+       "                        <td id=\"T_7d42a_row2_col0\" class=\"data row2 col0\" >77.82</td>\n",
+       "                        <td id=\"T_7d42a_row2_col1\" class=\"data row2 col1\" >81.30</td>\n",
+       "                        <td id=\"T_7d42a_row2_col2\" class=\"data row2 col2\" >70.623565</td>\n",
+       "                        <td id=\"T_7d42a_row2_col3\" class=\"data row2 col3\" >82.60</td>\n",
+       "                        <td id=\"T_7d42a_row2_col4\" class=\"data row2 col4\" >58.84</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_3f1ff_level0_row3\" class=\"row_heading level0 row3\" >$645-680</th>\n",
-       "                        <td id=\"T_3f1ff_row3_col0\" class=\"data row3 col0\" >77.05</td>\n",
-       "                        <td id=\"T_3f1ff_row3_col1\" class=\"data row3 col1\" >81.01</td>\n",
-       "                        <td id=\"T_3f1ff_row3_col2\" class=\"data row3 col2\" >66.230813</td>\n",
-       "                        <td id=\"T_3f1ff_row3_col3\" class=\"data row3 col3\" >81.11</td>\n",
-       "                        <td id=\"T_3f1ff_row3_col4\" class=\"data row3 col4\" >53.53</td>\n",
+       "                        <th id=\"T_7d42a_level0_row3\" class=\"row_heading level0 row3\" >$645-680</th>\n",
+       "                        <td id=\"T_7d42a_row3_col0\" class=\"data row3 col0\" >77.05</td>\n",
+       "                        <td id=\"T_7d42a_row3_col1\" class=\"data row3 col1\" >81.01</td>\n",
+       "                        <td id=\"T_7d42a_row3_col2\" class=\"data row3 col2\" >66.230813</td>\n",
+       "                        <td id=\"T_7d42a_row3_col3\" class=\"data row3 col3\" >81.11</td>\n",
+       "                        <td id=\"T_7d42a_row3_col4\" class=\"data row3 col4\" >53.53</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1690d6fa460>"
+       "<pandas.io.formats.style.Styler at 0x1691c7dd130>"
       ]
      },
-     "execution_count": 769,
+     "execution_count": 771,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,9 +1110,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50e40538",
+   "metadata": {},
+   "source": [
+    "## Scores by School Size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 776,
+   "id": "87623763",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_c7aa2_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Average Math Score</th>        <th class=\"col_heading level0 col1\" >Average Reading Score</th>        <th class=\"col_heading level0 col2\" >% Passing Math</th>        <th class=\"col_heading level0 col3\" >% Passing Reading</th>        <th class=\"col_heading level0 col4\" >% Overall Passing</th>    </tr>    <tr>        <th class=\"index_name level0\" >size_bins</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_c7aa2_level0_row0\" class=\"row_heading level0 row0\" >Small (<1000)</th>\n",
+       "                        <td id=\"T_c7aa2_row0_col0\" class=\"data row0 col0\" >83.83</td>\n",
+       "                        <td id=\"T_c7aa2_row0_col1\" class=\"data row0 col1\" >83.97</td>\n",
+       "                        <td id=\"T_c7aa2_row0_col2\" class=\"data row0 col2\" >93.952484</td>\n",
+       "                        <td id=\"T_c7aa2_row0_col3\" class=\"data row0 col3\" >96.04</td>\n",
+       "                        <td id=\"T_c7aa2_row0_col4\" class=\"data row0 col4\" >90.14</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_c7aa2_level0_row1\" class=\"row_heading level0 row1\" >Medium (1000-2000)\t</th>\n",
+       "                        <td id=\"T_c7aa2_row1_col0\" class=\"data row1 col0\" >83.37</td>\n",
+       "                        <td id=\"T_c7aa2_row1_col1\" class=\"data row1 col1\" >83.87</td>\n",
+       "                        <td id=\"T_c7aa2_row1_col2\" class=\"data row1 col2\" >93.616522</td>\n",
+       "                        <td id=\"T_c7aa2_row1_col3\" class=\"data row1 col3\" >96.77</td>\n",
+       "                        <td id=\"T_c7aa2_row1_col4\" class=\"data row1 col4\" >90.62</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_c7aa2_level0_row2\" class=\"row_heading level0 row2\" >Large (2000-5000)</th>\n",
+       "                        <td id=\"T_c7aa2_row2_col0\" class=\"data row2 col0\" >77.48</td>\n",
+       "                        <td id=\"T_c7aa2_row2_col1\" class=\"data row2 col1\" >81.20</td>\n",
+       "                        <td id=\"T_c7aa2_row2_col2\" class=\"data row2 col2\" >68.652380</td>\n",
+       "                        <td id=\"T_c7aa2_row2_col3\" class=\"data row2 col3\" >82.13</td>\n",
+       "                        <td id=\"T_c7aa2_row2_col4\" class=\"data row2 col4\" >56.57</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x16923008730>"
+      ]
+     },
+     "execution_count": 776,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create bins \n",
+    "bins = [0, 999, 1999,10000]\n",
+    "group_names = [\"Small (<1000)\", \"Medium (1000-2000)\t\", \"Large (2000-5000)\"]\n",
+    "school_data_complete[\"size_bins\"] = pd.cut(school_data_complete[\"size\"], bins, labels = group_names)\n",
+    "\n",
+    "#group by spending\n",
+    "group_sizing = school_data_complete.groupby(\"size_bins\")\n",
+    "\n",
+    "# perform calculations\n",
+    "math_avg = group_sizing[\"math_score\"].mean()\n",
+    "reading_avg = group_sizing[\"reading_score\"].mean()\n",
+    "math_pass = school_data_complete[school_data_complete[\"math_score\"] >= 70].groupby(\"size_bins\")['Student ID'].count()/group_sizing['Student ID'].count()\n",
+    "reading_pass = school_data_complete[school_data_complete[\"reading_score\"] >= 70].groupby(\"size_bins\")['Student ID'].count()/group_sizing['Student ID'].count()\n",
+    "both_pass = school_data_complete[(school_data_complete[\"reading_score\"] >= 70) & (school_data_complete[\"math_score\"] >= 70)].groupby(\"size_bins\")['Student ID'].count()/group_sizing['Student ID'].count()\n",
+    "\n",
+    "#create dataframe\n",
+    "\n",
+    "scores_by_size = pd.DataFrame({\n",
+    "    \"Average Math Score\": math_avg,\n",
+    "    \"Average Reading Score\": reading_avg,\n",
+    "    \"% Passing Math\": math_pass * 100,\n",
+    "    \"% Passing Reading\": reading_pass * 100,\n",
+    "    \"% Overall Passing\": both_pass * 100})\n",
+    "\n",
+    "scores_by_size.style.format({\"Average Math Score\": \"{:.2f}\", \n",
+    "                              \"Average Reading Score\": \"{:.2f}\", \n",
+    "                              \"% Passing Reading\": \"{:.2f}\", \n",
+    "                              \"% Passing Reading\":\"{:.2f}\", \n",
+    "                              \"% Overall Passing\": \"{:.2f}\" \n",
+    "                             })"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c76f4436",
+   "id": "8fdbfbcb",
    "metadata": {},
    "outputs": [],
    "source": []
