--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50e40538",
+   "id": "ce2d19bc",
    "metadata": {},
    "source": [
     "## Scores by School Size"
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 776,
-   "id": "87623763",
+   "id": "f303f9cb",
    "metadata": {},
    "outputs": [
     {
@@ -1197,9 +1197,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8749d7f8",
+   "metadata": {},
+   "source": [
+    "## Scores by School Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 787,
+   "id": "35ecd333",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_59ae3_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Average Math Score</th>        <th class=\"col_heading level0 col1\" >Average Reading Score</th>        <th class=\"col_heading level0 col2\" >% Passing Math</th>        <th class=\"col_heading level0 col3\" >% Passing Reading</th>        <th class=\"col_heading level0 col4\" >% Overall Passing</th>    </tr>    <tr>        <th class=\"index_name level0\" >type</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_59ae3_level0_row0\" class=\"row_heading level0 row0\" >Charter</th>\n",
+       "                        <td id=\"T_59ae3_row0_col0\" class=\"data row0 col0\" >83.41</td>\n",
+       "                        <td id=\"T_59ae3_row0_col1\" class=\"data row0 col1\" >83.90</td>\n",
+       "                        <td id=\"T_59ae3_row0_col2\" class=\"data row0 col2\" >93.701821</td>\n",
+       "                        <td id=\"T_59ae3_row0_col3\" class=\"data row0 col3\" >96.65</td>\n",
+       "                        <td id=\"T_59ae3_row0_col4\" class=\"data row0 col4\" >90.56</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_59ae3_level0_row1\" class=\"row_heading level0 row1\" >District</th>\n",
+       "                        <td id=\"T_59ae3_row1_col0\" class=\"data row1 col0\" >76.99</td>\n",
+       "                        <td id=\"T_59ae3_row1_col1\" class=\"data row1 col1\" >80.96</td>\n",
+       "                        <td id=\"T_59ae3_row1_col2\" class=\"data row1 col2\" >66.518387</td>\n",
+       "                        <td id=\"T_59ae3_row1_col3\" class=\"data row1 col3\" >80.91</td>\n",
+       "                        <td id=\"T_59ae3_row1_col4\" class=\"data row1 col4\" >53.70</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x16922b71910>"
+      ]
+     },
+     "execution_count": 787,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_type = school_data_complete.groupby(\"type\")\n",
+    "\n",
+    "\n",
+    "math_avg = group_type[\"math_score\"].mean()\n",
+    "reading_avg = group_type[\"reading_score\"].mean()\n",
+    "math_pass = school_data_complete[school_data_complete[\"math_score\"] >= 70].groupby(\"type\")['Student ID'].count()/group_type['Student ID'].count()\n",
+    "reading_pass = school_data_complete[school_data_complete[\"reading_score\"] >= 70].groupby(\"type\")['Student ID'].count()/group_type['Student ID'].count()\n",
+    "both_pass = school_data_complete[(school_data_complete[\"reading_score\"] >= 70) & (school_data_complete[\"math_score\"] >= 70)].groupby(\"type\")['Student ID'].count()/group_type['Student ID'].count()\n",
+    "\n",
+    "scores_by_type = pd.DataFrame({\n",
+    "    \"Average Math Score\": math_avg,\n",
+    "    \"Average Reading Score\": reading_avg,\n",
+    "    \"% Passing Math\": math_pass * 100,\n",
+    "    \"% Passing Reading\": reading_pass * 100,\n",
+    "    \"% Overall Passing\": both_pass * 100})\n",
+    "\n",
+    "scores_by_type.style.format({\"Average Math Score\": \"{:.2f}\", \n",
+    "                              \"Average Reading Score\": \"{:.2f}\", \n",
+    "                              \"% Passing Reading\": \"{:.2f}\", \n",
+    "                              \"% Passing Reading\":\"{:.2f}\", \n",
+    "                              \"% Overall Passing\": \"{:.2f}\" \n",
+    "                             })"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fdbfbcb",
+   "id": "9d59d438",
    "metadata": {},
    "outputs": [],
    "source": []
